--- a/package.json
+++ b/package.json
@@ -12,37 +12,42 @@
   "author": "Anthony Ting",
   "license": "UNLICENSED",
   "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/preset-env": "^7.18.6",
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@types/debounce": "^1.2.1",
     "@types/hyperscript": "^0.0.4",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
     "babel-loader": "^8.2.5",
     "babel-plugin-htm": "^3.0.0",
-    "bootstrap": "^5.1.3",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
-    "debounce": "^1.2.1",
-    "eslint": "^8.20.0",
+    "eslint": "^8.21.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "reactstrap": "^9.1.2",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
-    "webpack": "^5.73.0",
+    "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
   },
   "type": "module",
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^5.2.0",
+    "debounce": "^1.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "reactstrap": "^9.1.3"
+  }
 }
