--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,7 @@
     "noImplicitAny": true,
     "module": "CommonJS",
     "moduleResolution": "Node",
-    "lib": [
-      "DOM",
-    ],
+    "lib": ["DOM"],
     "target": "ESNext",
     "jsx": "react-jsx"
   }
